welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:5: error: value Yellow is not a member of object java.awt.Color
{coupstylo(c);avance();coupstylo(Color.Yellow);aRC(c);droite();aRC(c);gauche();gauche();aRC(c);droite()}
                                       ^FlowerPot:9: error: not found: value color
def growFlowers() {haut(Color.RED,Color.BLUE);trans();mid();trans();haut(color.PINK,color.GREEN)}
                                                                         ^FlowerPot:9: error: not found: value color
def growFlowers() {haut(Color.RED,Color.BLUE);trans();mid();trans();haut(color.PINK,color.GREEN)}
                                                                                    ^